# document-review-agent

./: .gitignore  CLAUDE.md
.claude/: plan.md  settings.json  settings.local.json
.claude/hooks/: validate-task.sh
.claude/subagents/: architect.md  backend-api-dev.md  backend-hitl-dev.md  backend-model-researcher.md  backend-tester.md  backend-workflow-dev.md  implementer.md  legal-critic.md  legal-researcher.md  researcher.md  reviewer.md
backend/: .env.example  main.py  pyproject.toml
backend/app/: config.py  main.py
backend/app/api/: deps.py
backend/app/api/v1/: auth.py  documents.py  review.py  router.py  tasks.py  upload.py
backend/app/core/: errors.py  llm_provider.py  security.py  state_machine.py
backend/app/db/: session.py
backend/app/hitl/: decision_processor.py  interrupt_handler.py  reviewer_assign.py
backend/app/models/: __init__.py  annotation.py  audit_log.py  base.py  document.py  human_review.py  review_task.py  risk_item.py  user.py
backend/app/schemas/: review.py  risk_item.py  task.py  upload.py
backend/app/services/: annotation_service.py  complete_service.py  review_service.py  task_service.py  upload_service.py
backend/app/websocket/: events.py  manager.py
backend/app/workers/: celery_app.py  document_tasks.py
backend/app/workflow/: checkpointer.py  graph.py  nodes.py  state.py
backend/tests/: test_e2e.py
docs/00_setup/: agent-teams-langchain-mcp-setup.md  project_rules.md
docs/08_api_spec/: fastapi-spec-v1.0.md
frontend/: .env.example  README.md  index.html  vite.config.ts
record/: backend_build_record.md
(+42 files in other folders)
